# language-interop

./: CMakeLists.txt  HelloWorld.c  HelloWorld.cc  HelloWorld.java  main.c  main.cc  main.m  main.py  main.swift  print-from-c-wrapper.h  print-from-c.c  print-from-c.h  print-from-cpp.cc
c/: CMakeLists.txt
cc/: CMakeLists.txt  print-from-cpp.h
java/: HelloWorld.java
objc/: CMakeLists.txt  HelloWorld.m  print-from-objc.h  print-from-objc.m
